<resources>
    <string name="app_name">WingzApp</string>
    <string name="title_home">Graduation</string>
    <string name="title_dashboard">Competitive</string>
    <string name="title_notifications">Profile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Login in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_gender">Gender :</string>
    <string name="hint_dob">Date Of Birth (DDMMYYYY)</string>
    <string name="name">Name</string>
    <string name="qppr">PAPER</string>
    <string name="notes">NOTES</string>
    <string name="syllabus">SYLLABUS</string>
    <string name="TT">TIME TABLE</string>
    <string name="result">RESULT</string>
    <string name="donate">DONATE</string>
    <string name="Branch">Select Branch</string>
    <string name="firstyear">First Year Common</string>
    <string name="cse">Computer Science</string>
    <string name="mech">Mechanical</string>
    <string name="expo">Electrical</string>
    <string name="extc">Electronics</string>
    <string name="civil">Civil</string>
    <string name="sem1">SEMESTER 1</string>
    <string name="sem2">SEMESTER 2</string>
    <string name="sem3">SEMESTER 3</string>
    <string name="sem4">SEMESTER 4</string>
    <string name="sem5">SEMESTER 5</string>
    <string name="sem6">SEMESTER 6</string>
    <string name="sem7">SEMESTER 7</string>
    <string name="sem8">SEMESTER 8</string>
    <string name="be">Bachelor of Engg (BE/BTECH)</string>
    <string name="bcom">B.COM Coming Soon</string>
    <string name="bsc">BSC Coming Soon</string>
    <string name="m1">Applied Mathematics 1</string>
    <string name="phy1">Engg Physics</string>
    <string name="chem1">Engg Chemistry</string>
    <string name="EG">Engg Graphics</string>
    <string name="bee">Basic Electrical Engg</string>
    <string name="bce">Basic Civil Engg</string>
    <string name="m2">Applied Mathematics 2</string>
    <string name="phy2">Advanced Physics</string>
    <string name="chem2">Material Chemistry</string>
    <string name="em">Engg Mechanics</string>
    <string name="aee">Advanced Electrical Engg</string>
    <string name="sem7_sem8">Sem7+Sem8</string>
    <string name="sem3_sem4">Sem3+Sem4</string>
    <string name="sem5_sem6">Sem5+Sem6</string>
    <string name="yearofquesppr">Select Year of Question Paper</string>
    <string name="s19">S-19</string>
    <string name="s18">S-18</string>
    <string name="s17">S-17</string>
    <string name="s16">S-16</string>
    <string name="s15">S-15</string>
    <string name="w19">W-19</string>
    <string name="w18">W-18</string>
    <string name="w17">W-17</string>
    <string name="w16">W-16</string>
    <string name="w15">W-15</string>
    <string name="cse3rd_m3">Applied Mathematics 3</string>
    <string name="cse3rd_acpld">ACPLD</string>
    <string name="cse3rd_eit">EIT</string>
    <string name="cse3rd_cao">CAO</string>
    <string name="cse3rd_dcfm">DCFM</string>
    <string name="mech3rd_fm">FM</string>
    <string name="mech3rd_kom">KOM</string>
    <string name="mech3rd_mp">MP</string>
    <string name="mech3rd_em">EM</string>
    <string name="expo3rd_emi">EMI</string>
    <string name="expo3rd_na">NA</string>
    <string name="expo3rd_edc">EDC</string>
    <string name="expo3rd_nces">NCES</string>
    <string name="civil3rd_ee">EE</string>
    <string name="civil3rd_eg">EG</string>
    <string name="civil3rd_ct">CT</string>
    <string name="civil3rd_SOM">SOM</string>
    <string name="extc3rd_emi">EMI</string>
    <string name="extc3rd_nans">Network Analysis And Synthesis</string>
    <string name="extc3rd_edc">EDC</string>
    <string name="extc3rd_oopnds">OOP and DS</string>
    <string name="cse4_dmgt">DMGT</string>
    <string name="cse4_os">OS</string>
    <string name="cse4_sp">SP</string>
    <string name="cse4_tfcs">TFCS</string>
    <string name="cse4_dspd">DSPD</string>
    <string name="mech4_m4">Applied Mathematics 4</string>
    <string name="mech4_thermo">Engg. Thermodyamics</string>
    <string name="mech4_mp">Machining Prcesses</string>
    <string name="mech4_hm">HM</string>
    <string name="mech4_mom">MOM</string>
    <string name="civil4_bcm">Building Construction and Material</string>
    <string name="civil4_te">Transportation Engg</string>
    <string name="civil4_surveying1">Surveying-1</string>
    <string name="civil4_sa1">Structure Analysis 1</string>
    <string name="civil4_geo1">Geotecnical Engg. 1</string>
    <string name="expo4_em1">Electrical Machines 1</string>
    <string name="expo4_ee">Element of Electromagnectic</string>
    <string name="expo4_cp">Computer Programing</string>
    <string name="expo4_dlec">DLEC</string>
    <string name="extc4_pdm">Power Device Machines</string>
    <string name="extc4_ss">Signals and System</string>
    <string name="extc4_emf">Electromagnetic Fields</string>
    <string name="extc4_dcfm">DCFM</string>
    <string name="mech5_app">Advanced Production Process</string>
    <string name="mech5_dme">Design of Machine Elements</string>
    <string name="mech5_ht">Heat Transfer</string>
    <string name="mech5_ieed">Industrial Economics and Entrepreneurship Development</string>
    <string name="mech5_mmm">Mechanical Measurement and Metrology</string>
    <string name="mech6_or">Operations Research</string>
    <string name="mech6_cse">Control System Engineering</string>
    <string name="mech6_dm">Dynamics of Machines</string>
    <string name="mech6_ec1">Energy Conversion 1</string>
    <string name="mech6_fe">Functional English</string>
    <string name="mech6_mt">Mechatronics</string>
    <string name="mech7_ae">Automobile Engineering </string>
    <string name="mech7_cd">Computer AIDES Design </string>
    <string name="mech7_dmd">Design of Mechanical Drives </string>
    <string name="mech7_ec2">Energy Conversion 2 </string>
    <string name="mech7_ie">Industrial Engineering</string>
    <string name="mech7_ir">Industrial Robotics </string>
    <string name="mech7_mhs">Material Handling System</string>
    <string name="mech7_ppe">Power Plant Engineering </string>
    <string name="mech7_sm">Synthetic of Mechanisms </string>
    <string name="mech7_td">Tool Design </string>
    <string name="mech8_amt">Advanced Manufacturing Techniques </string>
    <string name="mech8_aice">Advance IC Engine </string>
    <string name="mech8_ap">Automation in Production </string>
    <string name="mech8_ec3">Energy Conversion 3 </string>
    <string name="mech8_ifp">Industrial Fluid Power </string>
    <string name="mech8_mtd">Machine Tool Design </string>
    <string name="mech8_mv">Mechanical Vibrations </string>
    <string name="mech8_rac">Refrigeration and Air Conditioning </string>
    <string name="mech8_res">Renewable Energy Systems </string>
    <string name="mech8_sa">Stress Analysis </string>
    <string name="mech8_mis">Management Information System </string>
    <string name="mech8_im">Industrial Management </string>
    <string name="mech8_fem">Finite Element Method </string>
    <string name="mech8_cim">Computer Integrated Manufacturing </string>
    <string name="cse5_cg">Computer Graphics</string>
    <string name="cse5_dc">Data Communication</string>
    <string name="cse5_dbms">Database Management System</string>
    <string name="cse5_daa">Design and Analysis of Algorithms</string>
    <string name="cse5_oop">Object Oriented Programming</string>
    <string name="cse6_ai">ARTIFICIAL INTELLIGENCE</string>
    <string name="cse6_cn">COMPUTER NETWORKS</string>
    <string name="cse6_dp">DESIGN PATTERNS</string>
    <string name="cse6_fe">FUNCTIONAL ENGLISH</string>
    <string name="cse6_sepm">SOFTWARE ENGINEERING AND PROJECT MANAGEMENT</string>
    <string name="cse7_aca">ADVANCED COMPUTER ARCHITECTURE</string>
    <string name="cse7_babi">BIG DATA ANALYSIS AND BUSINESS INTELLIGENCE</string>
    <string name="cse7_cg">COMPUTATIONAL GEOMETRY</string>
    <string name="cse7_lp">LANGUAGE PROCESSOR</string>
    <string name="cse7_mft">MAINFRAME TECHNOLOGIES</string>
    <string name="cse7_mc">MOBILE COMPUTING</string>
    <string name="cse7_pna">PARALLEL AND NETWORK ALGORITHM</string>
    <string name="cse7_rtos">REAL TIME OPERATING SYSTEM</string>
    <string name="cse7_sa">SOFTWARE ARCHITECTURE</string>
    <string name="cse7_tcpnip">TCP and IP</string>
    <string name="cse7_dwm">Data Warehousing And Mining</string>
    <string name="cse8_dos">DISTRIBUTED OPERATING SYSTEM</string>
    <string name="cse8_ccc">CLUSTERING CLOUD COMPUTING</string>
    <string name="cse8_ot">OPTIMIZATION TECHNIQUES</string>
    <string name="cse8_pr">PATTERN RECOGNITION</string>
    <string name="cse8_sct">SOFT COMPUTING TECHNIQUES</string>
    <string name="cse8_aws">ADVANCED WIRELESS SENSOR</string>
    <string name="cse8_df">DIGITAL FORENSIC</string>
    <string name="cse8_dip">DIGITAL IMAGE PROCESSING</string>
    <string name="cse8_nlp">NATURAL LANGUAGE PROCESSING</string>
    <string name="cse8_ics">INFORMATION CYBER SECURITY</string>
    <string name="civil5_fm1">FLUID MECHANICS 1</string>
    <string name="civil5_ge2">GEOTECHNICAL ENGINEERING 2</string>
    <string name="civil5_hwr">HYDROLOGY AND WATER RESOURCES HWR</string>
    <string name="civil5_rccs">REINFORCED CEMENT CONCRETE RCC STRUCTURES</string>
    <string name="civil5_sa2">STRUCTURAL ANALYSIS 2</string>
    <string name="civil6_ee2">ENVIRONMENTAL ENGINEERING 2</string>
    <string name="civil6_fm2">FLUID MECHANICS 2</string>
    <string name="civil6_esp2">FUNCTIONAL ENGLISH</string>
    <string name="civil6_ss">STEEL STRUCTURES</string>
    <string name="civil6_s2">SURVEYING 2</string>
    <string name="civil7_acs">ADVANCED CONCRETE STRUCTURES</string>
    <string name="civil7_cml">CONSTRUCTION MANAGEMENT AND LAW</string>
    <string name="civil7_acm">ADVANCED-CONSTRUCTION MATERIALS</string>
    <string name="civil7_ah">ADVANCED HYDRAULICS</string>
    <string name="civil7_ate">ADVANCED TRAFFIC ENGINEERING</string>
    <string name="civil7_apswm">AIR POLLUTION SOLID WASTE MANAGEMENT</string>
    <string name="civil7_bs">BUILDING SERVICES</string>
    <string name="civil8_cef">CONSTRUCTION ECONOMICS FINANCE</string>
    <string name="civil8_aeg">ADVANCED ENGINEERING GEOLOGY</string>
    <string name="civil8_asa">ADVANCED STRUCTURAL ANALYSIS</string>
    <string name="civil8_drmt"> DISASTER RESPONSE MANAGEMENT TECHNIQUES</string>
    <string name="civil8_ems">ENVIRONMENTAL MANAGEEMENT SYSTEM</string>
    <string name="civil8_fce">FORENSIC CIVIL ENGINEERING</string>
    <string name="civil8_gigit">GEOTECHNICAL INVESTIGATION GROUND IMPROVEMENT TECHNIQUES</string>
    <string name="civil8_pad">PAVEMENT ANALYSIS DESIGN</string>
    <string name="civil8_psc">PRE STRESSED CONCRETE</string>
    <string name="civil8_wpe">WATER POWER ENGINEERING</string>
    <string name="civil8_wm">WATERSHED MANAGEMENT</string>
    <string name="civil8_wtds">WATER TRANSMISSION DISTRIBUTION SYSTEM</string>
    <string name="civil8_act">ADVANCED CONCRETE TECHNOLOGY</string>
    <string name="civil8_age">ADVANCED GEOTECHNICAL ENGINEERING</string>
    <string name="civil8_arccd">ADVANCED REINFORCED CEMENT CONCRETE DESIGN</string>
    <string name="civil8_asd">ADVANCED STEEL DESIGN</string>
    <string name="civil8_gis">APPLIED REMOTE SENSING GIS</string>
    <string name="civil8_wwwt">WATER WASTE WATER TREATMENT</string>
    <string name="civil8_ie">IRRIGATION ENGINEERING</string>
    <string name="login">Log In</string>
    <string name="signup">SIGN UP</string>
    <string name="slogan1">Complete University in your Pocket</string>
    <string name="slogan2">Simple &amp; Free Educational Application</string>
</resources>